Move model layer related classes to model package